Fix errors on all mandatories

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -107,6 +107,40 @@
 						<p>There is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</p>
 					</div>
 				</article>
+				<article>
+					<h2>Presidential</h2>
+					<div class="price_by_night">
+						<span>$100</span>
+					</div>
+					<div class="information">
+						<div class="max_guest"><span>10 Guests</span></div>
+						<div class="number_rooms"><span>5 Bedrooms</span></div>
+						<div class="number_bathrooms"><span>5 Bathrooms</span></div>
+					</div>
+					<div class="user">
+						<strong>Owner</strong>: John Lennon
+					</div>
+					<div class="description">
+						<p>There is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</p>
+					</div>
+				</article>
+				<article>
+					<h2>Gojo Bet</h2>
+					<div class="price_by_night">
+						<span>$100</span>
+					</div>
+					<div class="information">
+						<div class="max_guest"><span>10 Guests</span></div>
+						<div class="number_rooms"><span>5 Bedrooms</span></div>
+						<div class="number_bathrooms"><span>Bathrooms</span></div>
+					</div>
+					<div class="user">
+						<strong>Owner</strong>: John Lennon
+					</div>
+					<div class="description">
+						<p>There is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</p>
+					</div>
+				</article>
 			</section>
 		</div>
 
